[metadata]
name = arospy
# TODO: Use setuptools attr: package.__version__ when using setuptools >=v46.4.0
version = 0.1.2
url = https://github.com/Hugal31/arospy
author = Hugo Laloge
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = An async wrapper around rospy

[options]
python_requires = >=3.7
packages = arospy
