[metadata]
name = arospy-Hugal31
# TODO: Use setuptools attr: package.__version__ when using setuptools >=v46.4.0
version = 0.1.4
url = https://github.com/Hugal31/arospy
author = Hugo Laloge
author_email = hugo.laloge@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = An async wrapper around rospy
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
packages = arospy
